--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Seo Sang Wook
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Try to use Git/GitHub
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -19,17 +19,17 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: sangwook.seo.359
   flickr:
-  github: barryclark/jekyll-now
+  github: woodruff2k/woodruff2k.github.io
   instagram:
-  linkedin:
+  linkedin: sang-wook-seo-954ba956
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  rss:
+  twitter: neowoodruff
+  stackoverflow: users/16966092/sang-wook-seo
+  youtube: channel/UCZoAA4tr32xsTpUpdPBrbQg
+  googleplus:
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
